{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 169,
  "lineage": "4cf2f48e-0085-baff-ce8e-ca90c308e05b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "raghu_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731399016182:internet-gateway/igw-05384ed6098b4b806",
            "id": "igw-05384ed6098b4b806",
            "owner_id": "731399016182",
            "tags": {
              "Name": "raghu_internet_gateway"
            },
            "tags_all": {
              "Name": "raghu_internet_gateway"
            },
            "vpc_id": "vpc-019b164a1d2916279"
          },
          "dependencies": [
            "aws_vpc.raghu_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "raghu_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05384ed6098b4b806",
            "id": "r-rtb-07f2c5a816068184f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f2c5a816068184f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.raghu_internet_gateway",
            "aws_route_table.raghu_route_table_pub",
            "aws_vpc.raghu_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raghu_route_table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731399016182:route-table/rtb-07f2c5a816068184f",
            "id": "rtb-07f2c5a816068184f",
            "owner_id": "731399016182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05384ed6098b4b806",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "raghu_route_table_pub"
            },
            "tags_all": {
              "Name": "raghu_route_table_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-019b164a1d2916279"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raghu_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "raghu_subnet_pub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4c5dad89141f726",
            "route_table_id": "rtb-07f2c5a816068184f",
            "subnet_id": "subnet-0a70efc0a286926b9"
          },
          "dependencies": [
            "aws_route_table.raghu_route_table_pub",
            "aws_subnet.raghu_subnet_pub_name",
            "aws_vpc.raghu_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "raghu_sg_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731399016182:security-group/sg-05bfd5a22a9852f0b",
            "description": "This security group is for ec2 instance in public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bfd5a22a9852f0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 80 open to public",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port ssh open to Public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "raghu_sg_pub",
            "name_prefix": "",
            "owner_id": "731399016182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "raghu_sg_pub"
            },
            "tags_all": {
              "Name": "raghu_sg_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-019b164a1d2916279"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raghu_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raghu_subnet_pub_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731399016182:subnet/subnet-0a70efc0a286926b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a70efc0a286926b9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "731399016182",
            "tags": {
              "Name": "raghu_subnet_pub_name"
            },
            "tags_all": {
              "Name": "raghu_subnet_pub_name"
            },
            "vpc_id": "vpc-019b164a1d2916279"
          },
          "dependencies": [
            "aws_vpc.raghu_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raghu_subnet_pvt_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731399016182:subnet/subnet-07be2d937cd115034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07be2d937cd115034",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731399016182",
            "tags": {
              "Name": "raghu_subnet_pvt_name"
            },
            "tags_all": {
              "Name": "raghu_subnet_pvt_name"
            },
            "vpc_id": "vpc-019b164a1d2916279"
          },
          "dependencies": [
            "aws_vpc.raghu_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "raghu_vpc_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731399016182:vpc/vpc-019b164a1d2916279",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-091bdb81b1853f1a9",
            "default_route_table_id": "rtb-07ff326d3bca6f81b",
            "default_security_group_id": "sg-0e95801f405fd3684",
            "dhcp_options_id": "dopt-0a9870fb66a381fd1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-019b164a1d2916279",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07ff326d3bca6f81b",
            "owner_id": "731399016182",
            "tags": {
              "Name": "raghu_vpc"
            },
            "tags_all": {
              "Name": "raghu_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "raghu_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc34ab2709337aa",
            "arn": "arn:aws:ec2:us-east-1:731399016182:instance/i-0826caa22daf7b6bb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0826caa22daf7b6bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd4530e1640eb4e1",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_ip": "10.0.1.232",
            "public_ip": "35.175.135.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dad38722bbfdc36f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a70efc0a286926b9",
            "tags": {
              "Environment": "Dev",
              "Name": "raghu_ec2_instance_pub"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "raghu_ec2_instance_pub"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bfd5a22a9852f0b"
            ]
          },
          "dependencies": [
            "aws_vpc.raghu_vpc_name",
            "aws_security_group.raghu_sg_pub",
            "aws_subnet.raghu_subnet_pub_name",
            "aws_subnet.raghu_subnet_pvt_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc34ab2709337aa",
            "arn": "arn:aws:ec2:us-east-1:731399016182:instance/i-0d43f0582b3334a2a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d43f0582b3334a2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01f6c267f350a1512",
            "private_dns": "ip-10-0-2-186.ec2.internal",
            "private_ip": "10.0.2.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0772b87baa6798aa6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07be2d937cd115034",
            "tags": {
              "Environment": "Dev",
              "Name": "raghu_ec2_instance_pvt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "raghu_ec2_instance_pvt"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bfd5a22a9852f0b"
            ]
          },
          "dependencies": [
            "aws_vpc.raghu_vpc_name",
            "aws_security_group.raghu_sg_pub",
            "aws_subnet.raghu_subnet_pub_name",
            "aws_subnet.raghu_subnet_pvt_name"
          ]
        }
      ]
    }
  ]
}